[package]
name = "topos-frontend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12"
smol_str = "0.1"
bumpalo = { version = "3.6", features = ["collections"] }
smallvec = "1.7"
serde = "1.0"